basic component, api and hook setup

--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
   "dependencies": {
     "@hookform/resolvers": "^4.0.0",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-router": "^1.99.13",
     "@types/react-syntax-highlighter": "^15.5.13",
     "class-variance-authority": "^0.7.1",
