--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:server": "tsx watch server/index.ts",
+    "dev:full": "concurrently \"npm run dev\" \"npm run dev:server\"",
     "build": "tsc --noEmit && vite build",
+    "build:server": "tsc server/index.ts --outDir dist/server --target es2020 --module commonjs",
+    "start:server": "node dist/server/index.js",
     "lint": "eslint . --fix",
     "preview": "vite preview",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
@@ -18,6 +22,7 @@
     "test:watch": "vitest watch",
     "test:ci": "vitest run --coverage --bail=1",
     "type-check": "tsc --noEmit",
+    "import-data": "npx tsx scripts/import-data.ts",
     "prepare": "husky"
   },
   "dependencies": {
@@ -27,11 +32,13 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-router": "^1.99.13",
-    "@types/better-sqlite3": "^7.6.13",
     "@types/react-syntax-highlighter": "^15.5.13",
     "better-sqlite3": "^11.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^4.21.2",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.1",
     "react": "^18.0.0",
@@ -56,7 +63,10 @@
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.6.1",
     "@tsconfig/node18": "^18.2.4",
-    "@types/node": "^22.13.1",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.23",
+    "@types/node": "^22.17.0",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
@@ -65,6 +75,7 @@
     "@vitest/coverage-v8": "^3.0.5",
     "@vitest/ui": "^3.0.5",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.2.0",
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^10.0.1",
@@ -86,6 +97,7 @@
     "prettier": "^3.4.2",
     "sass-embedded": "^1.83.4",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.20.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.23.0",
     "vite": "^6.1.0",
