--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.0.0",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.1.6",
@@ -75,6 +76,7 @@
     "@vitest/coverage-v8": "^3.0.5",
     "@vitest/ui": "^3.0.5",
     "autoprefixer": "^10.4.20",
+    "codebase-map": "^0.6.0",
     "concurrently": "^9.2.0",
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
@@ -138,5 +140,6 @@
         }
       }
     ]
-  }
+  },
+  "packageManager": "pnpm@7.18.1+sha512.1ae9675b1156d5d7a3d6c4a28eed45958b6f58861adf966f6d393d17c8cea3ed46809115771d4e6cb699080a5dd88e0807e8e8cf2356cc89c4755d2142052ad1"
 }
