--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.0.0",
-    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-router": "^1.99.13",
     "@types/react-syntax-highlighter": "^15.5.13",
     "better-sqlite3": "^11.10.0",
@@ -47,7 +48,6 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.3",
-    "react-query": "^3.39.3",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.0",
     "sonner": "^1.7.4",
